Add editor layer and shaders, enhance asset management
Introduced an EditorLayer with ImGui integration for debugging and scene controls. Added new shaders (basic3d.glsl, texture.glsl, flat_color.glsl) to enhance rendering capabilities. Updated CMakeLists for asset paths, dependencies, and submodules to streamline asset handling and flexibility across platforms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,22 @@ project(Honey_Editor)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Honey_Editor main.cpp)
+add_executable(Honey_Editor src/honey_editor_app.cpp
+        src/editor_layer.cpp
+        src/editor_layer.h)
+
+target_include_directories(Honey_Editor PRIVATE
+        ${CMAKE_SOURCE_DIR}/Honey/engine/src
+)
+target_include_directories(Honey_Editor PRIVATE
+        ${CMAKE_SOURCE_DIR}/Honey/engine/vendor
+)
+
+add_subdirectory(Honey)
+target_link_libraries(Honey_Editor PRIVATE engine)
+
+add_compile_definitions(
+        ASSET_ROOT="${CMAKE_SOURCE_DIR}/assets"
+)
+
+
