Add camera selection and management improvements
Introduced "render_camera_selector" for managing primary cameras and moved the "CameraController" script to a dedicated header file. Enhanced the Scene Hierarchy Panel with right-click functionality, component management, and dynamic camera assignment. This refactor simplifies camera handling and extends editor usability.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ add_executable(Honey_Editor src/honey_editor_app.cpp
         src/editor_layer.cpp
         src/editor_layer.h
         src/panels/scene_hierarchy_panel.h
-        src/panels/scene_hierarchy_panel.cpp)
+        src/panels/scene_hierarchy_panel.cpp
+        assets/scripts/camera_controller.h)
 
 target_include_directories(Honey_Editor PRIVATE
         ${CMAKE_SOURCE_DIR}/Honey/engine/src
