--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ add_executable(Honey_Editor src/honey_editor_app.cpp
         src/editor_layer.h
         src/panels/scene_hierarchy_panel.h
         src/panels/scene_hierarchy_panel.cpp
-        assets/scripts/camera_controller.h)
+        assets/scripts/camera_controller.h
+        src/panels/content_browser_panel.h
+        src/panels/content_browser_panel.cpp)
 
 target_include_directories(Honey_Editor PRIVATE
         ${CMAKE_SOURCE_DIR}/Honey/engine/src
