--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ add_executable(Honey_Editor src/honey_editor_app.cpp
         src/panels/scene_hierarchy_panel.cpp
         assets/scripts/camera_controller.h
         src/panels/content_browser_panel.h
-        src/panels/content_browser_panel.cpp)
+        src/panels/content_browser_panel.cpp
+        assets/scripts/player_controller.h
+        assets/scripts/script_registrar.h)
 
 target_include_directories(Honey_Editor PRIVATE
         ${CMAKE_SOURCE_DIR}/Honey/engine/src
