Add bird, pipe, and spawner scripts with relevant integrations
Introduce new scripts: `BirdController`, `PipeController`, and `PipeSpawner` to handle game-specific entities and logic. Integrated these scripts into the project by updating the script registry, registrar, and build files. Improved component addition in entities and ensured scripts reload cleanly by clearing the registry on library unload.

--- a/assets/scripts/CMakeLists.txt
+++ b/assets/scripts/CMakeLists.txt
@@ -14,7 +14,10 @@ endforeach()
 
 # Build as a shared library
 add_library(HoneyScripts SHARED ${SCRIPT_SOURCES}
-        script_entry.cpp)
+        script_entry.cpp
+        bird_controller.h
+        pipe_spawner.h
+        pipe_contoller.h)
 
 # Force inclusion of all object files to ensure static initializers run
 if (MSVC)
