Refactor and centralize scripting logic into the engine
Removed script handling from 'assets/scripts' and incorporated it into the engine's core. Introduced 'ScriptEngine', 'ScriptGlue', and supporting utilities to manage Mono-based scripting functionality. This improves maintainability and consolidates all scripting logic within the engine itself.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ target_include_directories(Honey_Editor PRIVATE
 add_compile_definitions(GLM_FORCE_SILENT_WARNINGS)
 
 add_subdirectory(Honey)
-add_subdirectory(assets/scripts)
+#add_subdirectory(assets/scripts)
 target_link_libraries(Honey_Editor PRIVATE engine)
 
 add_compile_definitions(
