Refactor scene handling and update submodule URLs
Refactored the scene loading logic to handle separate editor and runtime scenes, improving scene management and supporting conditional loading. Updated submodule URLs to point to the current repository, ensuring consistent dependency sourcing. Added Box2D as a new submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/treybertram06/Honey.git
 [submodule "vendor/yaml-cpp"]
 	path = vendor/yaml-cpp
-	url = https://github.com/jbeder/yaml-cpp.git
+	url = https://github.com/treybertram06/yaml-cpp.git
