Add support for depth buffer and index buffer improvements.
This commit integrates Vulkan rendering enhancements like depth buffer support and refactors index buffer handling to support uint16 indices. It also introduces a minimal 3D quad test, culling mode configuration, and makes adjustments to associated APIs and renderer components.

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -2,8 +2,8 @@ Renderer:
   API: Vulkan
   ClearColor: [0.1, 0.1, 0.1, 1]
   Wireframe: false
-  DepthTest: false
-  DepthWrite: false
+  DepthTest: true
+  DepthWrite: true
   FaceCulling: true
   Blending: true
   VSync: false
